Updated the GUI, create home page, add product page

--- a/trunk/ProductWarehouseManager/ProductWarehouseManager/RoleManager.resx
+++ b/trunk/ProductWarehouseManager/ProductWarehouseManager/RoleManager.resx
@@ -289,7 +289,7 @@
         ZDcyLnh8Pr0QAX6KqB1g10FxbVGmisuuMpCm/wGHgyqUTxmtfgAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="picbx_Update.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="picbx_Add.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAABmUExURf///01NTUxMTPPz801NTP7+/vT09P39/fX19fj4+Do6OkRERKioqEhISKGhoX9/f+bm
